Add stylesheet and javascript  files

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
     <head>
         <meta charset="utf-8"/>
         <title>Ma page modèle </title>
+        <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
         <h1>Ma page modèle</h1>
         <p>Ceci est la page qui me sert de modèle pour mes nouveaux projets de sites internet.</p>
+        <script src="main.js"></script>
     </body>
 </html>
